--- a/QuickKart/Views/Shared/_LayoutCustomer.cshtml
+++ b/QuickKart/Views/Shared/_LayoutCustomer.cshtml
@@ -30,11 +30,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="GetCoupons">Festive Offers</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="FAQ">FAQ</a></li>
+                    <li><a asp-area="" asp-controller="Product" asp-action="GetProductForCategory">Search Product</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="GiveFeedBack">FeedBack</a></li>
                 </ul>
             </div>
+
         </div>
     </nav>
 
@@ -42,10 +42,14 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2020 - QuickKart</p>
+        <br />
+        <br />
+        <footer style="bottom:0%;position:fixed;width:80%;text-align:center;">
+            <hr />
+            <p>&copy; @DateTime.Now.Year - Shop@@Home</p>
         </footer>
+
+
     </div>
 
     <environment include="Development">
