--- a/QuickKart/Views/Shared/_LayoutAdmin.cshtml
+++ b/QuickKart/Views/Shared/_LayoutAdmin.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor httpContextAccessor;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -38,6 +40,12 @@
             </div>
         </div>
     </nav>
+    <div class="row">
+        <div class="col-md-9"></div>
+        <div class="col-md-3">
+            Welcome  <strong>@httpContextAccessor.HttpContext.Session.GetString("username")</strong>
+        </div>
+    </div>
 
     <partial name="_CookieConsentPartial" />
 
@@ -55,6 +63,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
